bad/array_subscript_invalid_subscript_type_void.example_compiler_output
ERROR
[1mbad/array_subscript_invalid_subscript_type_void.lat:6:5: [1;31merror: [0;1marray subscript has to be of type `int`, not `void`[m
	arr[foo()];
	   [1;32m^[m
